
[package]
name = "leetcode"
version = "0.1.0"
authors = ["Jhonny Knaak de Vargas <jhonny.vargas@acad.pucrs.br>"]
edition = "2018"

[lib]
crate-type = ["dylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
log = "0.4.22"